# lite-llm-studio

./: .gitignore  README.md  build.spec  build_desktop.bat  desktop_app.py  main.py  pyproject.toml  run_app.py  run_studio.py
.github/actions/python-setup/: action.yml
.github/workflows/: ci.yml  ci_pipeline.yml
config/: logger_config.yaml
experiments/notebooks/: 001_llms_cpu_metrics.ipynb  finetune.ipynb
notebooks/: 001_llms_cpu_metrics.ipynb  002_llms_cpu_quantized_metrics.ipynb  003_llms_cpu_finetune_metricts.ipynb
src/lite_llm_studio/: __init__.py  main.py
src/lite_llm_studio/app/: __init__.py  app.py
src/lite_llm_studio/app/components/: __init__.py  data_components.py  ui_components.py
src/lite_llm_studio/app/icons/: __init__.py  svg_icons.py
src/lite_llm_studio/app/modules/: __init__.py  dry_run_page.py  hardware_page.py  home_page.py  recommendations_page.py  training_page.py
src/lite_llm_studio/app/navigation/: __init__.py  nav_components.py
src/lite_llm_studio/app/styles/: __init__.py  app_styles.py
src/lite_llm_studio/app/utils/: __init__.py  logging_setup.py
src/lite_llm_studio/core/: __init__.py
src/lite_llm_studio/core/configuration/: __init__.py  base_config.py  data_schema.py  desktop_app_config.py  hardware_schema.py  model_schema.py
src/lite_llm_studio/core/data/: README.md  __init__.py  dataset_manager.py  processor.py  processors.py  upload_manager.py
src/lite_llm_studio/core/instrumentation/: __init__.py  scanner.py
src/lite_llm_studio/core/ml/: __init__.py  model_converter.py  registry.py  training.py
src/lite_llm_studio/core/ml/evaluation/: __init__.py  model_evaluation.py
src/lite_llm_studio/core/ml/runtimes/: __init__.py  base.py  llamacpp_rt.py  transformers_rt.py
src/lite_llm_studio/core/orchestration/: __init__.py  orchestrator.py
