[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lite_llm_studio"
version = "0.0.1"
description = "Ferramenta para o ajuste fino, monitoramento e instrumentação de LLMs."
readme = "README.md"
authors = [
  { name = "Lucas Bandeira" },
  { name = "Vermon Aguiar" }
]
requires-python = ">=3.12"

# Somente dependências de runtime
dependencies = []

# Somente dependências extras de desenvolvimento
# Serão instaladas apenas pelo CI e em ambiente de dev
[project.optional-dependencies]
dev = [
  "pytest>=8",
  "coverage[toml]>=7",
  "mypy>=1.10",
  "ruff>=0.5.0",
  "black>=24.0",
]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["lite_llm_studio*"]

# -----------------------------
# Testes e Qualidade
# -----------------------------
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
junit_family = "xunit2"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
skip_empty = true
show_missing = true
fail_under = 80

[tool.black]
line-length = 150
target-version = ["py312"]
exclude = '''
/(
    \.git
  | \.venv
  | env
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py312"
line-length = 150
extend-exclude = ["env", ".venv", "build", "dist"]
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
mypy_path = ["src"]